[project]
name = "library-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "extra-streamlit-components>=0.1.71",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "streamlit-lottie>=0.0.5",
    "streamlit-option-menu>=0.4.0",
]
